fix: adjust z-index so tooltip shows

--- a/src/components/Dashboard/styles/ViewDashboard.module.css
+++ b/src/components/Dashboard/styles/ViewDashboard.module.css
@@ -6,6 +6,13 @@
 }
 
 .cover {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 1998;
+    background: rgba(33, 43, 54, 0.4);
     display: none;
 }
 
